--- a/config/database.yml
+++ b/config/database.yml
@@ -16,3 +16,13 @@ test:
   timeout: 5000
   username: danielrassiner
   password:
+
+production:
+  adapter: postgresql
+  encoding: utf8
+  host: localhost
+  database: codex_production
+  pool: 5
+  timeout: 5000
+  username:
+  password:
